[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "ccxt>=4.5.59",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "gunicorn>=26.0.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ta>=0.11.0",
]
