[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "ccxt>=4.5.59",
    "dedust>=1.1.4",
    "email-validator>=2.3.0",
    "eventlet>=0.41.0",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=26.0.0",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.0",
    "pytoniq>=0.1.43",
    "pytoniq-core>=0.1.46",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "ta>=0.11.0",
]
